--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aimee-deploy",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "deploy",
   "main": "app.js",
   "scripts": {
@@ -28,9 +28,10 @@
     "co": "^4.6.0",
     "date-format": "0.0.2",
     "fs-extra": "^0.30.0",
-    "gre": "^0.1.0",
+    "gre": "^0.1.1",
     "linco.lab": "^1.0.0",
     "nodegit": "^0.14.1",
+    "npm": "^3.10.6",
     "pm2": "^2.0.7",
     "vpm-config": "^2.1.2"
   }
